package com.slas;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;



@SpringBootApplication
public class SlasApplication {

    public static void main(String[] args) {
        SpringApplication.run(SlasApplication.class, args);
    }

}
