package com.slas.servlet;

import javax.servlet.annotation.WebServlet;

/**
 * @author hxc
 * @version 1.0
 * @date 2019/11/4 12:37
 */
@WebServlet
public class RegServlet {

}
