@startuml

title __SLASV5's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.slas {
      class com.slas.SlasApplication {
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace controller {
        class com.slas.controller.MainController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace controller {
        class com.slas.controller.QRController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace controller {
        class com.slas.controller.RegController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace entity {
        class com.slas.entity.LectureEntity {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace entity {
        class com.slas.entity.TeacherAuthEntity {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace mapper {
        interface com.slas.mapper.MainMapper {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace repo {
        interface com.slas.repo.LectureSlas {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace repo {
        interface com.slas.repo.RepoSlas {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace service {
        class com.slas.service.ImageService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace servlet {
        class com.slas.servlet.RegServlet {
        }
      }
    }
  }
  

  namespace  {
    namespace om.slas {
      namespace util {
        class com.slas.util.MD5Util {
        }
      }
    }
  }
  

  com.slas.controller.MainController o-- com.slas.repo.LectureSlas : lectureSlas
  com.slas.controller.MainController o-- com.slas.mapper.MainMapper : mainMapper
  com.slas.controller.MainController o-- com.slas.repo.RepoSlas : repoSlas
  com.slas.controller.QRController o-- com.slas.service.ImageService : imageService
  com.slas.controller.RegController o-- com.slas.repo.RepoSlas : repoSlas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
